# ghidra_assistant

./: .gitignore  README.md  Readme.md  pyproject.toml  test.py
.github/instructions/: drawio.instructions.md
documentation/: Makefile
documentation/presentations/: introduction.tex
documentation/source/: concrete_device.rst  conf.py  debugger.rst  index.rst  introduction.rst  overview.rst  setup.rst
documentation/source/_ext/: drawio_viewer.py
documentation/source/_static/: drawio-viewer.css  drawio-viewer.js
documentation/source/architectures/: index.rst
documentation/source/architectures/aarch64/: system_configuration.rst
documentation/source/architectures/adding_a_new_architecture/: index.rst
documentation/source/architectures/arm64/: index.rst  raspberry_pi_4.rst
documentation/source/architectures/arm_thumb/: index.rst
documentation/source/architectures/riscv/: index.rst
documentation/source/bridge/: bridge.rst
documentation/source/concrete_device/: device_hook_files.rst  index.rst  overview.rst  protocol_and_memory_model.rst
documentation/source/emulator/: emulator_overview.drawio  emulator_overview.rst  index.rst
documentation/source/ghidra/: analysis_workflow.rst  connection_and_backends.rst  index.rst
documentation/source/images/: concrete-device-to-ghidra-sequence.drawio
ga_plugin/: .gitignore  .project  Readme.md  build.gradle
ghidra_assistant/: concrete_device.py  ghidra_assistant.py  requirements.txt
ghidra_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ghidra_assistant/utils/: bit_helper.py  utils.py
ghidra_assistant/utils/archs/: Readme.md
ghidra_assistant/utils/debugger/: Readme.md
ghidra_assistant/utils/ghidra/: Readme.md  ghidra_connect.py
src/ghidra_assistant/: .gitignore  Readme.md  __init__.py  concrete_device.py  ghidra_assistant.py  requirements.txt  track.md
src/ghidra_assistant/utils/: definitions.py  ga_client.py  ga_server.py  utils.py
tests/: Readme.md
tests/arm64/emulator/: example1_base.py
tests/ghidra_connection/: Readme.md  structs.py  test_coloring_example.py
tests/unit/debugger/: test_arm64_exception_stepper.py  test_ga_riscv_backend.py  test_gdb_rsp_aarch64.py  test_gdb_rsp_protocol.py  test_gdb_rsp_server.py
tests/unit/emulator/: test_backends.py
tests/unit/riscv/: test_riscv_state_stepper.py
tools/bsim/: Readme.md  setup.sh
tools/bsim_ui/: bsim_ui.py
(+77 files in other folders)
