[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghidra_assistant"
version = "0.0.1"
authors = [
  { name="Eljakim Herrewijnen", email="e.herrewijnen@gmail.com" },
]
description = "Package to assist ghidra"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent, Linux preferred",
]