[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ghidra_assistant"
dynamic = ["version"]
authors = [
    { name = "Eljakim Herrewijnen", email = "e.herrewijnen@gmail.com" },
]
description = "Assistant for ghidra"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
    "ghidra_bridge",
    "pyhidra",
    "capstone",
    "keystone-engine",
    "fastmcp",
]
license = {text = "MIT"}

[tool.pdm]
package-dir = "src"
distribution = true

[tool.pdm.version]
source = "file"
path = "src/ghidra_assistant/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
  "ghidra-stubs",
]

[project.scripts]
ghidra-assistant = "ghidra_assistant.ghidra_assistant:main"